--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
        "es6": true,
        "node": true
    },
-   "extends": ["eslint:recommended", "plugin:mocha/recommended"],
+   "extends": ["eslint:recommended"],
    "globals": {
        "Atomics": "readonly",
        "SharedArrayBuffer": "readonly"
