--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/DikaArdnt/wajs/",
   "dependencies": {
-    "@wppconnect/wa-js": "^2.28.0",
+    "@wppconnect/wa-js": "github:wppconnect-team/wa-js",
     "@wppconnect/wa-version": "^1.2.160",
     "axios": "^1.6.2",
     "fluent-ffmpeg": "^2.1.2",
